- Removed test files - Added FCM - Added splash screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#001a33</color>
-    <color name="colorPrimaryDark">#001a33</color>
+    <color name="colorPrimaryDark">#0f031e</color>
     <color name="colorAccent">#001a33</color>
+
+    <color name="splash_bg">#FBFBFB</color>
 </resources>
