- In-App messaging support added - App icon also added for notification - App shortcuts added - Graphics updated

--- a/app/src/main/res/drawable/splash_screen_bg.xml
+++ b/app/src/main/res/drawable/splash_screen_bg.xml
@@ -3,4 +3,11 @@
 
     <item android:drawable="@color/splash_bg" />
 
+
+    <item>
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/gdg_logo" />
+
+    </item>
 </layer-list>
