--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="app_windows_bg">#FAFAFA</color>
     <color name="splash_bg">#FBFBFB</color>
     <color name="notification_tint">#536DFE</color>
+
+    <color name="progress_red">#db3236</color>
+    <color name="progress_green">#3cba54</color>
+    <color name="progress_blue">#4885ed</color>
+    <color name="progress_yellow">#f4c20d</color>
+
 </resources>
